Bug 1700565 - Disallow spaces to contribute to minimum advance width when line breaking is everywhere. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D112255